# fastapi-project

./: .gitignore  pyproject.toml
app/: main.py
app/core/: config.py  security.py
app/db/: mongodb.py
app/models/: user_model.py
app/routers/: product_routers.py  user_routers.py
app/schemas/: product_schema.py  user_schema.py
app/services/: product_service.py  user_service.py
